--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@
   background-color: #fff;
   padding: 25px 0 32px;
   &__btn-hamburger{
-    display: block;
+    display: none;
   }
   &__inner {
     display: flex;
